# ml-ops-basics

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
dvcfiles/: model.onnx.dvc
notebooks/: data-test.ipynb
src/: app.py  convert_model_to_onnx.py  inference.py  inference_onnx.py  model.py  train.py
